# LAB6

./: CMakeLists.txt
task0/a/: mypipe.c
task0/b/: mypipeline.c
task1/: myShell  myshell.c  myshell2.c  out.txt
task2/: in.txt  myShell  myshell.c
task3/: LineParser.c  LineParser.h  makefile  myShell  myshell.c  pipeHelper.c  pipeHelper.h
